# test-shakmaty-pgn-to-uci

./: Cargo.toml  README.md  main.py  pyproject.toml  test_bench_python.py  test_pure_python.py
benches/: my_benchmark.rs
san_to_uci/: Cargo.toml  pyproject.toml
san_to_uci/src/: lib.rs
src/: lib.rs  main.rs
